--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 							<!-- Banner -->
 								<section id="banner">
-									<a href="">
+									<a href="#">
 										<span class="image image-full"><img src="images/pic01.jpg" alt="" /></span>
 										<header>
 											<h2>Bitsn'Berri.es</h2>
