adding linked in

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 								<section>
 									<ul class="social">
 										<li class="twitter"><a href="http://twitter.com/zainab3brahimi" class="icon48 icon48-2">Twitter</a></li>
-										<li class="linkedin"><a href="#" class="icon48 icon48-4">LinkedIn</a></li>
+										<li class="linkedin"><a href="http://www.linkedin.com/pub/zainab-ebrahimi/47/1b3/a60" class="icon48 icon48-4">LinkedIn</a></li>
 										<li class="googleplus"><a href="#" class="icon48 icon48-6">Google+</a></li>
 									</ul>
 								</section>
